less/style.less
/* Styles go in this file. */

html, body { height: 100%; }

body {
	margin: 0;
	font-size: 12px;
	font-family: 'Source Sans Pro', sans-serif;
}

#rank-toggle {
	position: absolute;
	top: 10px;
	right: 14px;
	border-radius: 4px;
	overflow: hidden;
	button {
		background: #aaa;
		color: #fff;
		border: none;
		outline: none;
		font-family: 'Source Sans Pro', sans-serif;
		font-size: 12px;
		cursor: pointer;
		&.selected {
			background: #333;
		}
	}
}

.x.axis line,
.x.axis path {
	display: none;
}

.x.axis text, .y.axis text {
	font-size: 11px;
	fill: grey;
	font-family: 'Source Sans Pro', sans-serif;
}

.horse {
	transition: 200ms opacity;
}

.rank-number {
	font-weight: bold;
}

.tick {
	cursor: pointer;
}

.tick line {
	stroke: #e0e1e1;
	opacity: 1;
}

.domain {
	stroke: #e0e1e1;
	opacity: 1;
}

.circle.end {
	stroke: #fff;
	stroke-width: 4px;
}

